--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
   "deno.enable": true,
   "deno.lint": true,
   "deno.unstable": true,
+  "deno.config": "./deno.json",
   "[typescript]": {
     "editor.defaultFormatter": "denoland.vscode-deno"
   }
